prevent google sign in from getting cut off

--- a/resources/assets/css/components/outer.less
+++ b/resources/assets/css/components/outer.less
@@ -183,6 +183,7 @@
   });
 }
 .nav-google {
+  overflow: visible;
   .mq_640({
     display: none;
   });
